--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "client"
   ],
   "scripts": {
-    "start-client": "cd client && yarn run start"
+    "start-client": "cd client && yarn run start",
+    "start-server": "cd server && yarn run start",
+    "build-server": "cd server && yarn run build",
+    "commit": "npx git-cz"
   },
   "author": "Florian Richter",
   "license": "MIT"
