--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,22 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "apollo-server-fastify": "^2.6.9",
+        "class-transformer": "^0.2.3",
+        "fastify": "^2.6.0",
+        "graphql": "^14.4.2",
+        "pino": "^5.12.6",
+        "type-graphql": "^0.17.4"
+    },
+    "devDependencies": {
+        "@types/graphql": "^14.2.2",
+        "@types/pino": "^5.8.8",
+        "pino-pretty": "^3.2.0",
+        "reflect-metadata": "^0.1.13",
         "typescript": "^3.5.3"
+    },
+    "scripts": {
+        "start": "node dist/index.js",
+        "build": "tsc"
     }
 }
