--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
   "scripts": {
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^4.1.18",
     "graphql-tag": "^2.10.1",
     "ts-transform-graphql-tag": "^0.2.1"
   }
