--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,18 @@
     "dependencies": {
         "apollo-server-fastify": "^2.6.9",
         "class-transformer": "^0.2.3",
+        "faker": "^4.1.0",
         "fastify": "^2.6.0",
         "graphql": "^14.4.2",
         "pino": "^5.12.6",
-        "type-graphql": "^0.17.4"
+        "type-graphql": "^0.17.4",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
+        "@types/faker": "^4.1.5",
         "@types/graphql": "^14.2.2",
         "@types/pino": "^5.8.8",
+        "@types/uuid": "^3.4.5",
         "pino-pretty": "^3.2.0",
         "reflect-metadata": "^0.1.13",
         "typescript": "^3.5.3"
