--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@apollo/react-common": "^3.0.1",
     "@apollo/react-hooks": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@reach/router": "^1.2.1",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
@@ -13,8 +17,10 @@
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.15",
     "date-fns": "^2.0.1",
+    "final-form": "^4.18.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-final-form": "^6.3.0",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
@@ -41,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/reach__router": "^1.2.4",
     "@types/styled-components": "^4.1.18",
     "graphql-tag": "^2.10.1",
     "ts-transform-graphql-tag": "^0.2.1"
